--- a/src/components/Table/style.module.scss
+++ b/src/components/Table/style.module.scss
@@ -8,6 +8,7 @@
   box-shadow: 3px 5px 20px 0 rgba(black, 4%);
   background-color: white;
   padding: 10px 30px;
+  overflow-x: auto;
 }
 
 .table {
